fix scrollbar not changing color in light mode

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,7 @@
     color: white;
   }
 }
+
+[class='light'] {
+  background-color: hsl(0, 0%, 100%);
+}
